@@ -1,3 +1,12 @@
+2023-09-28T01:16:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6333321758 # 814
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
+* notice: last 14d: unq all: 1 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 252 529
+* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 252 530
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-09-27]
+
 2023-09-27T08:22:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6323299501 # 812
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
